Fix broken triangle images by removing custom; switch back to readable

--- a/readable.css
+++ b/readable.css
@@ -15,47 +15,6 @@ Mac:
 
 ------------------------------------------------*/
 
-/*  Inspect Triangle Style
-------------------------------------------------*/
-#console-messages .console-group-messages .section .header::before,
-#console-messages .properties-tree li.parent::before
-{
-    -webkit-user-select: none;
-    -webkit-mask-image: url(Images/statusbarButtonGlyphs.png);
-    -webkit-mask-size: 320px 144px;
-    content: "a";
-    color: transparent;
-    text-shadow: none;
-    position: relative;
-    top: 2px;
-    margin-right: 1px;
-    height: 12px;
-}
-
-.outline-disclosure li.parent::before {
--webkit-mask-position: -4px -96px;
-background-color: rgb(110, 110, 110);
-}
-
-.elements-tree-outline li.parent::before {
-top: 0 !important;
-}
-
-.outline-disclosure li.parent::before {
-float: left;
-width: 10px;
-padding-right: 2px;
-}
-
-.outline-disclosure li.parent.expanded::before {
--webkit-mask-position: -20px -96px;
-}
-
-#console-messages .console-group-messages .section.expanded .header::before,
-#console-messages .properties-tree li.parent.expanded::before
-{
-    content: url(chrome-devtools://devtools/Images/treeDownTriangleBlack.png) !important;
-}
 
 /*  Globe Typography
 ------------------------------------------------*/
@@ -108,20 +67,9 @@ body.platform-mac .monospace, body.platform-mac .source-code {
     border: 1px solid transparent;
 }
 
-#elements-content .parent::before {
-    content: url(chrome-devtools://devtools/Images/treeRightTriangleBlack.png) !important;
-    position: relative;
-    z-index: 999;
-}
-
 /* expand style */
 #elements-content .parent.expanded {
     background: #f1f1f1;
-}
-
-#elements-content .parent.expanded::before {
-    content: url(chrome-devtools://devtools/Images/treeDownTriangleBlack.png) !important;
-    
 }
 
 /* select style */
